fix alignment of button

--- a/client/src/components/pages/RobotFile/RobotFile.module.css
+++ b/client/src/components/pages/RobotFile/RobotFile.module.css
@@ -5,7 +5,6 @@
 }
 
 .syntaxModalButton {
-  width: 100%;
   background-color: var(--colorPrimaryInverted2);
   border-color: var(--colorPrimaryInverted2);
 }
